--- a/src/main.css
+++ b/src/main.css
@@ -16,6 +16,8 @@
     --success-color : #10b981;
     --warning-color : #ef4444;
     --error-color : #f59e0b;
+
+    --nav-height : 50px;
 }
 
 * {
