--- a/src/Layout/Nav.module.css
+++ b/src/Layout/Nav.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     height: var(--nav-height);
     background-color: var(--secondary-bg);
+    padding: 0 1rem;
 }
 
 .nav {
