--- a/src/Layout/Footer.module.css
+++ b/src/Layout/Footer.module.css
@@ -3,4 +3,5 @@
     border-top: 2px solid var(--border);
     color: var(--secondary-text);
     text-transform: capitalize;
+    padding-block: .5rem;
 }
