--- a/src/Layout/Nav.module.css
+++ b/src/Layout/Nav.module.css
@@ -5,64 +5,96 @@
     align-items: center;
     height: var(--nav-height);
     background-color: var(--secondary-bg);
-    padding: 0 1rem;
 }
 
 .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: relative;
     text-transform: capitalize;
     width: 100%;
     height: 100%;
 
-    h1{
-        flex-grow: 1;
-    }
-
     ul {
-        flex-grow: 1;
-        gap: 2rem;
-        display: flex;
         list-style: none;
-        justify-content: space-around;
+        justify-content: space-between;
         height: 100%;
-        
-        li {
-            height: 100%;
-            display: flex;
-            position: relative;
-            justify-content: center;
-            align-items: center;
-            flex-grow: 1;
-            &::after{
-                content: "";
-                background-color: var(--primary-btn);
-                width: 0;
-                height: 2px;
-                position:  absolute;
-                bottom: 0;
-                left: 0;
-                transition: all .2s ease-in-out;
-            }
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 1rem;
+    }
+    
+    li, button {
+        min-width: 150px;
+        height: 100%;
+        display: flex;
+        max-width: 250px;
+        position: relative;
+        &::after, &.selectedTabe::after{
+            content: "";
+            background-color: var(--primary-btn);
+            width: 0;
+            height: 3px;
+            position:  absolute;
+            bottom: 0;
+            left: 0;
+            transition: all .2s ease-in-out;
+        }
 
-            &:hover {
-                background-color: rgba(16, 185, 129, .2);
-            }
-            &:hover::after{
-                width: 100%;
-            }
+        &:hover, &.selectedTab {
+            background-color: rgba(16, 185, 129, .2);
+        }
+
+        &:hover::after, &.selectedTab::after {
+            width: 100%;
+        }
+
+        a {
+            color: var(--primary-btn);
+            text-decoration: none;
+            height: 100%;
+            width: 100%;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color .2s ease-in-out;
         }
     }
-
-    a {
-        display: inline-block;
-        color: var(--primary-btn);
-        text-decoration: none;
+    
+    h1{
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        color: var(--primary-text);
+        padding: 0 1rem;
+        a{
+            width: fit-content;
+            color: var(--primary-btn);
+            text-decoration: none;
+        }
+    }
+    
+    button {
+        position: absolute;
+        min-width: 100px;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 0;
         height: 100%;
-        display: flex;
-        align-items: center;
-        transition: background-color .2s ease-in-out;
-        
+        background-color: transparent;
+        border: none;
+        outline: none;
+
+        a{
+            display: flex;
+            flex-direction: column;
+        }
+
+        svg {
+            height: 40%;
+            width: 40%;
+        }
     }
 }
